[package]
name = "think_dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cpal = "0.15.2"
dasp = { version="0.11.0", features=["all"] }
fundsp = "0.12.0"
iced = { version="0.8", features=["canvas"]}
termion = "2.0.1"
rodio = "0.17.1"
